cmake_minimum_required(VERSION 3.0)
project(EENGINE)

find_package(OpenGL REQUIRED)

include_directories(
    include/common/pellet
    include/common
    src
)

if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten") # IF
include_directories(
    include/emcc-emscripten-wasm
)

link_directories(
    ${PROJECT_SOURCE_DIR}/lib/emcc-emscripten-wasm
)

set(CMAKE_EXECUTABLE_SUFFIX ".html")

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --preload-file ${CMAKE_SOURCE_DIR}/data@data")

elseif(WIN32) # ELSE IF

link_directories(
    ${PROJECT_SOURCE_DIR}/lib/cl-windows-amd64/OpenAL-1.1
    ${PROJECT_SOURCE_DIR}/lib/cl-windows-amd64/glew-2.1.0-x64
    ${PROJECT_SOURCE_DIR}/lib/cl-windows-amd64/SDL2-2.24.1
)

include_directories(
    include/cl-windows-amd64
)
endif() # ENDIF

add_library(pellet
  include/common/pellet/Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.cpp
  include/common/pellet/Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.cpp
  include/common/pellet/Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.cpp
  include/common/pellet/Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.cpp
  include/common/pellet/Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.cpp
  include/common/pellet/Bullet3Common/b3AlignedAllocator.cpp
  include/common/pellet/Bullet3Common/b3Logging.cpp
  include/common/pellet/Bullet3Common/b3Vector3.cpp
  include/common/pellet/Bullet3Dynamics/b3CpuRigidBodyPipeline.cpp
  include/common/pellet/Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.cpp
  include/common/pellet/Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.cpp
  include/common/pellet/Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.cpp
  include/common/pellet/Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.cpp
  include/common/pellet/Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.cpp
  include/common/pellet/Bullet3Geometry/b3ConvexHullComputer.cpp
  include/common/pellet/Bullet3Geometry/b3GeometryUtil.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btDbvt.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btDispatcher.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
  include/common/pellet/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btCollisionObject.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btGhostObject.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btManifoldResult.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/btUnionFind.cpp
  include/common/pellet/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btBox2dShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btBoxShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btCapsuleShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btCollisionShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btCompoundShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConcaveShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConeShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvex2dShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvexHullShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvexShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btCylinderShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btEmptyShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btShapeHull.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btSphereShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTriangleCallback.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTriangleMesh.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
  include/common/pellet/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
  include/common/pellet/BulletCollision/Gimpact/btContactProcessing.cpp
  include/common/pellet/BulletCollision/Gimpact/btGenericPoolAllocator.cpp
  include/common/pellet/BulletCollision/Gimpact/btGImpactBvh.cpp
  include/common/pellet/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp
  include/common/pellet/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp
  include/common/pellet/BulletCollision/Gimpact/btGImpactShape.cpp
  include/common/pellet/BulletCollision/Gimpact/btTriangleShapeEx.cpp
  include/common/pellet/BulletCollision/Gimpact/gim_box_set.cpp
  include/common/pellet/BulletCollision/Gimpact/gim_contact.cpp
  include/common/pellet/BulletCollision/Gimpact/gim_memory.cpp
  include/common/pellet/BulletCollision/Gimpact/gim_tri_collision.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
  include/common/pellet/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
  include/common/pellet/BulletDynamics/Character/btKinematicCharacterController.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
  include/common/pellet/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
  include/common/pellet/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
  include/common/pellet/BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.cpp
  include/common/pellet/BulletDynamics/Dynamics/btRigidBody.cpp
  include/common/pellet/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
  include/common/pellet/BulletDynamics/Dynamics/btSimulationIslandManagerMt.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBody.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyConstraint.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyFixedConstraint.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp
  include/common/pellet/BulletDynamics/Featherstone/btMultiBodySliderConstraint.cpp
  include/common/pellet/BulletDynamics/MLCPSolvers/btDantzigLCP.cpp
  include/common/pellet/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp
  include/common/pellet/BulletDynamics/MLCPSolvers/btMLCPSolver.cpp
  include/common/pellet/BulletDynamics/Vehicle/btRaycastVehicle.cpp
  include/common/pellet/BulletDynamics/Vehicle/btWheelInfo.cpp
  include/common/pellet/BulletInverseDynamics/details/MultiBodyTreeImpl.cpp
  include/common/pellet/BulletInverseDynamics/details/MultiBodyTreeInitCache.cpp
  include/common/pellet/BulletInverseDynamics/IDMath.cpp
  include/common/pellet/BulletInverseDynamics/MultiBodyTree.cpp
  include/common/pellet/BulletSoftBody/btDefaultSoftBodySolver.cpp
  include/common/pellet/BulletSoftBody/btSoftBody.cpp
  include/common/pellet/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp
  include/common/pellet/BulletSoftBody/btSoftBodyHelpers.cpp
  include/common/pellet/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp
  include/common/pellet/BulletSoftBody/btSoftMultiBodyDynamicsWorld.cpp
  include/common/pellet/BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp
  include/common/pellet/BulletSoftBody/btSoftRigidDynamicsWorld.cpp
  include/common/pellet/BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp
  include/common/pellet/LinearMath/btAlignedAllocator.cpp
  include/common/pellet/LinearMath/btConvexHull.cpp
  include/common/pellet/LinearMath/btConvexHullComputer.cpp
  include/common/pellet/LinearMath/btGeometryUtil.cpp
  include/common/pellet/LinearMath/btPolarDecomposition.cpp
  include/common/pellet/LinearMath/btQuickprof.cpp
  include/common/pellet/LinearMath/btSerializer.cpp
  include/common/pellet/LinearMath/btThreads.cpp
  include/common/pellet/LinearMath/btVector3.cpp
)

add_library(rend
    include/common/rend/rend.h
    include/common/rend/Animation.h
    include/common/rend/Animation.cpp
    include/common/rend/Buffer.h
    include/common/rend/Buffer.cpp
    include/common/rend/Mesh.h
    include/common/rend/Mesh.cpp
    include/common/rend/Model.h
    include/common/rend/Model.cpp
    include/common/rend/ModelRenderer.h
    include/common/rend/ModelRenderer.cpp
    include/common/rend/Renderer.h
    include/common/rend/Renderer.cpp
    include/common/rend/RenderTexture.h
    include/common/rend/RenderTexture.cpp
    include/common/rend/rendmath.h
    include/common/rend/rendmath.cpp
    include/common/rend/Shader.h
    include/common/rend/Shader.cpp
    include/common/rend/stb_image.h
    include/common/rend/Texture.h
    include/common/rend/Texture.cpp
    include/common/rend/sys/Atomic.h
    include/common/rend/sys/config.h
    include/common/rend/sys/Exception.h
    include/common/rend/sys/File.h
    include/common/rend/sys/List.h
    include/common/rend/sys/Lock.h
    include/common/rend/sys/Mutex.h
    include/common/rend/sys/panic.h
    include/common/rend/sys/Pipe.h
    include/common/rend/sys/Private.h
    include/common/rend/sys/Ptr.h
    include/common/rend/sys/String.h
    include/common/rend/sys/ThreadPool.h
    include/common/rend/sys/Unique.h
    include/common/rend/sys/Vector.h
    include/common/rend/sys/Weak.h
    include/common/rend/sys/Zero.h
)

add_library(eengine
    src/eengine/eengine.h
    src/eengine/Core.h
    src/eengine/Core.cpp
    src/eengine/Entity.h
    src/eengine/Entity.cpp
    src/eengine/Component.h
    src/eengine/Component.cpp
    src/eengine/eengine_defines.h
    src/eengine/NonCopyable.h
    src/eengine/Input.h
    src/eengine/Input.cpp
    src/eengine/Camera.h
    src/eengine/Camera.cpp
    src/eengine/Debug.h
    src/eengine/Debug.cpp
    src/eengine/Environment.h
    src/eengine/Environment.cpp
    src/eengine/Resources.h
    src/eengine/Resources.cpp
    src/eengine/RenderContext.h
    src/eengine/RenderContext.cpp
    src/eengine/Resource.h
    src/eengine/Resource.cpp
    src/eengine/Shader.h
    src/eengine/Shader.cpp
    src/eengine/Model.h
    src/eengine/Model.cpp
    src/eengine/Texture.h
    src/eengine/Texture.cpp
    src/eengine/Mesh.h
    src/eengine/Mesh.cpp
    src/eengine/Sound.h
    src/eengine/Sound.cpp
    src/eengine/Collider.h
    src/eengine/Collider.cpp
    src/eengine/BoxCollider.h
    src/eengine/BoxCollider.cpp
    src/eengine/SphereCollider.h
    src/eengine/SphereCollider.cpp
    src/eengine/CylinderCollider.h
    src/eengine/CylinderCollider.cpp
    src/eengine/CapsuleCollider.h
    src/eengine/CapsuleCollider.cpp
    src/eengine/AudioContext.h
    src/eengine/AudioContext.cpp
    src/eengine/PhysicsContext.h
    src/eengine/PhysicsContext.cpp
    src/eengine/components/Transform.h
    src/eengine/components/Transform.cpp
    src/eengine/components/QuadRenderer.h
    src/eengine/components/QuadRenderer.cpp
    src/eengine/components/ModelRenderer.h
    src/eengine/components/ModelRenderer.cpp
    src/eengine/components/AudioListener.h
    src/eengine/components/AudioListener.cpp
    src/eengine/components/AudioSource.h
    src/eengine/components/AudioSource.cpp
    src/eengine/components/RigidBody.h
    src/eengine/components/RigidBody.cpp
)

add_executable(game
    src/game/main.cpp
    src/game/components/ScreamingMover.h
    src/game/components/ScreamingMover.cpp
    src/game/components/PlayerController.h
    src/game/components/PlayerController.cpp
    src/game/components/WeaponPickup.h
    src/game/components/WeaponPickup.cpp
    src/game/components/RocketController.h
    src/game/components/RocketController.cpp
    src/game/components/Explosion.h
    src/game/components/Explosion.cpp
)

if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten") # IF

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sALLOW_MEMORY_GROWTH")

target_link_libraries(rend
    GL
    GLEW
)

target_link_libraries(eengine
    rend
    openal
    SDL2
    pellet
)

elseif(WIN32) # ELSE IF
include_directories(
    include/Windows-x64
)

target_link_libraries(rend
    glew32
    SDL2
    SDL2main
    opengl32
)

target_link_libraries(eengine
    glew32
    SDL2
    SDL2main
    OpenAL32
    rend
    pellet
)
endif() # ENDIF

target_link_libraries(game
    eengine
)